--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "sylius/sylius": "~1.10.0"
+        "sylius/sylius": "^1.10"
     },
     "require-dev": {
         "behat/behat": "^3.7",
@@ -23,7 +23,7 @@
         "friends-of-behat/suite-settings-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
-        "phpspec/phpspec": "^7.0",
+        "phpspec/phpspec": "^7.1",
         "sensiolabs/security-checker": "^6.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^4.4 || ^5.2",
@@ -35,8 +35,7 @@
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "symfony/dependency-injection": "<4.4.19 || >=5.0.0 <5.2.2",
         "dompdf/dompdf": "1.0.2",
-        "symfony/webpack-encore-bundle": "^1.12",
-        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
+        "symfony/webpack-encore-bundle": "^1.12"
     },
     "conflict": {
         "doctrine/dbal": "^3.0",
@@ -55,5 +54,11 @@
     },
     "autoload-dev": {
         "classmap": ["tests/Application/Kernel.php"]
+    },
+    "config": {
+        "sort-packages": true,
+        "platform": {
+            "php": "8.0"
+        }
     }
 }
